# cmake-training

./: .gitignore  CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.hpp  mysqrt.cpp
